--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -1,3 +1,14 @@
 /* =============
     Base
 ============= */
+
+
+ul.ba {
+    list-style-type: none;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
