--- a/dev/scss/sections/_why-NJ.scss
+++ b/dev/scss/sections/_why-NJ.scss
@@ -4,6 +4,11 @@
 
 #why-nj{
 
+    @include xl {
+        grid-template-columns: auto 1200px auto;
+        grid-template-areas: ". content .";
+    }
+
     ul{
         display: grid;
         grid-template-columns: 16px auto 16px;
@@ -43,6 +48,47 @@
             "photo1 p1"
             "photo2 photo3"
             "p2 photo4";
+
+            #nj-title{
+                grid-area: title;
+            }
+    
+            #ig-contain-1{
+                grid-area: photo1;
+            }
+
+            #ig-contain-2{
+                grid-area: photo2;
+            }
+
+            #ig-p1{
+                grid-area: p1;
+            }
+
+            #ig-contain-3{
+                grid-area: photo3;
+            }
+
+            #ig-p2{
+                grid-area: p2;
+            }
+    
+            #ig-contain-4{
+                grid-area: photo4;
+            }
+        }
+
+
+
+        @include lg{
+
+            display: grid;
+            grid-template-columns: repeat(8, auto);
+            grid-template-areas: 
+            "title title title title title title title title"
+            "photo1 photo1 p1 p1 . . . ."
+            ". . photo2 photo2 photo3 photo3 . ."
+            ". . . . p2 p2 photo4 photo4";
 
             #nj-title{
                 grid-area: title;
