--- a/dev/scss/sections/_why-NJ.scss
+++ b/dev/scss/sections/_why-NJ.scss
@@ -9,7 +9,7 @@
         grid-template-areas: ". content .";
     }
 
-    ul{
+    #new-jersey{
         display: grid;
         grid-template-columns: 16px auto 16px;
         grid-template-areas: 
