--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -448,9 +448,10 @@ ul {
 }
 @media (min-width: 1024px) {
   #why-nj #new-jersey {
+    border: 1px solid red;
     display: grid;
-    grid-template-columns: repeat(8, auto);
-    grid-template-areas: "title title title title title title title title" "photo1 photo1 p1 p1 . . . ." ". . photo2 photo2 photo3 photo3 . ." ". . . . p2 p2 photo4 photo4";
+    grid-template-columns: 10% auto 10% 10% auto 10%;
+    grid-template-areas: "title title title title title title" "photo1 photo1 p1 p1 p1 p1" ". photo2 photo2 photo3 photo3 ." "p2 p2 p2 p2 photo4 photo4";
   }
   #why-nj #new-jersey #nj-title {
     grid-area: title;
