--- a/dev/scss/sections/_why-NJ.scss
+++ b/dev/scss/sections/_why-NJ.scss
@@ -112,7 +112,7 @@
                 grid-area: photo2;
             }
 
-            #ig-par1{
+            #ig-p1{
                 grid-area: p1;
             }
 
@@ -120,7 +120,7 @@
                 grid-area: photo3;
             }
 
-            #ig-par2{
+            #ig-p2{
                 grid-area: p2;
             }
     
